--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <title>{% block title %}BJ Home Panel{% endblock %}</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
+
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body class="flex min-h-screen bg-gray-100">
