--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,6 @@
 <!-- Sidebar -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
 <div class="w-64 bg-white border-r hidden md:block">
   <div class="p-4 text-xl font-bold border-b">
     <i class="fas fa-store-alt mr-2"></i>BJ Home
@@ -35,6 +37,11 @@
 </a>
     </li>
     
+<li>
+<a href="{{ url_for('laporan_bp.laporan_menu') }}" class="flex items-center space-x-2 hover:text-blue-600">
+    <i class="fas fa-file-alt"></i><span>Laporan</span>
+  </a>
+</li>
 
 
   </ul>
