--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,7 +7,7 @@
   </div>
   <ul class="space-y-2 p-4 text-gray-700">
     <li>
-      <a href="/" class="block p-2 hover:bg-gray-200 rounded">
+      <a href="/dashboard" class="block p-2 hover:bg-gray-200 rounded">
         <i class="fas fa-home mr-2"></i>Dashboard
       </a>
     </li>
